--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,12 +2,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
-  background-color: #ccc;
+  background-color: #eaeaea;
   color: #333333;
   font-family: 'Roboto', sans-serif;
 } 
 
 header {
-  background: url('../images/bg.jpg');
+  background: url('../images/bg.1.jpg');
   height: 50vh;
 }
